// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders components/suggestion/demo/basic.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-suggestion ant-suggestion-content css-var-_r_9_"
  >
    <div
      class="ant-sender css-var-_r_9_ ant-sender-main"
    >
      <div
        class="ant-sender-content"
      >
        <textarea
          class="ant-input ant-input-borderless css-var-_r_9_ ant-input-css-var ant-sender-input"
          placeholder="输入 / 获取建议"
          style="overflow-y: hidden; resize: none;"
        />
        <div
          class="ant-sender-actions-list"
        >
          <div
            class="ant-sender-actions-list-presets ant-flex css-var-_r_9_"
          >
            <button
              class="ant-btn css-var-_r_9_ ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only ant-sender-actions-btn ant-sender-actions-btn-disabled"
              disabled=""
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="arrow-up"
                  class="anticon anticon-arrow-up"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="arrow-up"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-cascader-dropdown ant-suggestion css-var-_r_9_ ant-select-css-var ant-cascader-css-var css-var-_r_9_ ant-select-dropdown-placement-topLeft"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; min-width: auto;"
  >
    <div>
      <div
        class="ant-cascader-menus"
      >
        <ul
          class="ant-cascader-menu"
          role="menu"
        >
          <li
            aria-checked="false"
            class="ant-cascader-menu-item"
            data-path-key="report"
            role="menuitemcheckbox"
            title="Write a report"
          >
            <div
              class="ant-cascader-menu-item-content"
            >
              <div
                class="ant-suggestion-item ant-flex css-var-_r_9_"
              >
                Write a report
              </div>
            </div>
          </li>
          <li
            aria-checked="false"
            class="ant-cascader-menu-item"
            data-path-key="draw"
            role="menuitemcheckbox"
            title="Draw a picture"
          >
            <div
              class="ant-cascader-menu-item-content"
            >
              <div
                class="ant-suggestion-item ant-flex css-var-_r_9_"
              >
                Draw a picture
              </div>
            </div>
          </li>
          <li
            aria-checked="false"
            class="ant-cascader-menu-item ant-cascader-menu-item-expand"
            data-path-key="knowledge"
            role="menuitemcheckbox"
            title="Check some knowledge"
          >
            <div
              class="ant-cascader-menu-item-content"
            >
              <div
                class="ant-suggestion-item ant-flex css-var-_r_9_"
              >
                <div
                  class="ant-suggestion-item-icon"
                >
                  <span
                    aria-label="open-a-i"
                    class="anticon anticon-open-a-i"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="open-a-i"
                      fill="currentColor"
                      fill-rule="evenodd"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M475.6 112c-74.03 0-139.72 42.38-172.92 104.58v237.28l92.27 56.48 3.38-235.7 189-127.45A194.33 194.33 0 00475.6 112m202.9 62.25c-13.17 0-26.05 1.76-38.8 4.36L453.2 304.36l-1.37 96.15 186.58-125.25 231.22 137.28a195.5 195.5 0 004.87-42.33c0-108.04-87.93-195.96-195.99-195.96M247.34 266C167.34 290.7 109 365.22 109 453.2c0 27.92 5.9 54.83 16.79 79.36l245.48 139.77 90.58-56.12-214.5-131.38zm392.88 74.67l-72.7 48.85L771.5 517.58 797.3 753C867.41 723.11 916 653.97 916 573.1c0-27.55-5.86-54.12-16.57-78.53zm-123 82.6l-66.36 44.56-1.05 76.12 64.7 39.66 69.54-43.04-1.84-76.48zm121.2 76.12l5.87 248.34L443 866.9A195.65 195.65 0 00567.84 912c79.22 0 147.8-46.52 178.62-114.99L719.4 550.22zm-52.86 105.3L372.43 736.68 169.56 621.15a195.35 195.35 0 00-5.22 44.16c0 102.94 79.84 187.41 180.81 195.18L588.2 716.6z"
                      />
                    </svg>
                  </span>
                </div>
                Check some knowledge
              </div>
            </div>
            <div
              class="ant-cascader-menu-item-expand-icon"
            >
              <span
                aria-label="right"
                class="anticon anticon-right"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/suggestion/demo/basic.tsx extend context correctly 2`] = `[]`;

exports[`renders components/suggestion/demo/block.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-suggestion ant-suggestion-content css-var-_r_5_"
  >
    <div
      class="ant-sender css-var-_r_5_ ant-sender-main"
    >
      <div
        class="ant-sender-content"
      >
        <textarea
          class="ant-input ant-input-borderless css-var-_r_5_ ant-input-css-var ant-sender-input"
          placeholder="输入 / 获取建议"
          style="overflow-y: hidden; resize: none;"
        />
        <div
          class="ant-sender-actions-list"
        >
          <div
            class="ant-sender-actions-list-presets ant-flex css-var-_r_5_"
          >
            <button
              class="ant-btn css-var-_r_5_ ant-btn-circle ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-icon-only ant-sender-actions-btn ant-sender-actions-btn-disabled"
              disabled=""
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="arrow-up"
                  class="anticon anticon-arrow-up"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="arrow-up"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M868 545.5L536.1 163a31.96 31.96 0 00-48.3 0L156 545.5a7.97 7.97 0 006 13.2h81c4.6 0 9-2 12.1-5.5L474 300.9V864c0 4.4 3.6 8 8 8h60c4.4 0 8-3.6 8-8V300.9l218.9 252.3c3 3.5 7.4 5.5 12.1 5.5h81c6.8 0 10.5-8 6-13.2z"
                    />
                  </svg>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-cascader-dropdown ant-suggestion css-var-_r_5_ ant-suggestion-block ant-select-css-var ant-cascader-css-var css-var-_r_5_ ant-select-dropdown-placement-topLeft"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; min-width: auto;"
  >
    <div>
      <div
        class="ant-cascader-menus"
      >
        <ul
          class="ant-cascader-menu"
          role="menu"
        >
          <li
            aria-checked="false"
            class="ant-cascader-menu-item"
            data-path-key="report"
            role="menuitemcheckbox"
            title="Write a report"
          >
            <div
              class="ant-cascader-menu-item-content"
            >
              <div
                class="ant-suggestion-item ant-flex css-var-_r_5_"
              >
                Write a report
              </div>
            </div>
          </li>
          <li
            aria-checked="false"
            class="ant-cascader-menu-item"
            data-path-key="draw"
            role="menuitemcheckbox"
            title="Draw a picture"
          >
            <div
              class="ant-cascader-menu-item-content"
            >
              <div
                class="ant-suggestion-item ant-flex css-var-_r_5_"
              >
                Draw a picture
              </div>
            </div>
          </li>
          <li
            aria-checked="false"
            class="ant-cascader-menu-item"
            data-path-key="knowledge"
            role="menuitemcheckbox"
            title="Check some knowledge"
          >
            <div
              class="ant-cascader-menu-item-content"
            >
              <div
                class="ant-suggestion-item ant-flex css-var-_r_5_"
              >
                Check some knowledge
                <div
                  class="ant-suggestion-item-extra"
                >
                  <span
                    class="ant-tag ant-tag-filled css-var-_r_5_"
                  >
                    Extra Info
                  </span>
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/suggestion/demo/block.tsx extend context correctly 2`] = `
[
  "\`NaN\` is an invalid value for the \`%s\` css style property.",
]
`;

exports[`renders components/suggestion/demo/trigger.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-suggestion ant-suggestion-content css-var-_r_0_"
  >
    <div
      class="ant-select ant-select-outlined css-var-_r_0_ ant-select-css-var ant-select-multiple ant-select-show-arrow ant-select-show-search"
      style="width: 100%;"
    >
      <div
        class="ant-select-content"
      >
        <div
          class="ant-select-content-item ant-select-content-item-prefix"
          style="opacity: 1;"
        >
          <div
            class="ant-select-placeholder"
            style="visibility: visible;"
          >
            可任意输入 / 与 # 多次获取建议
          </div>
        </div>
        <div
          class="ant-select-content-item ant-select-content-item-suffix"
          style="opacity: 1;"
        >
          <input
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="listbox"
            autocomplete="off"
            class="ant-select-input"
            id="test-id"
            role="combobox"
            style="--select-input-width: 0;"
            type="search"
            value=""
          />
        </div>
      </div>
      <div
        class="ant-select-suffix"
      >
        <span
          aria-label="down"
          class="anticon anticon-down"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up css-var-_r_0_ ant-select-css-var ant-select-dropdown-empty ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div>
        <div
          class="ant-select-item-empty"
          id="test-id_list"
          role="listbox"
        >
          <div
            class="css-var-_r_0_ ant-empty ant-empty-normal ant-empty-small"
          >
            <div
              class="ant-empty-image"
            >
              <svg
                height="41"
                viewBox="0 0 64 41"
                width="64"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  No data
                </title>
                <g
                  fill="none"
                  fill-rule="evenodd"
                  transform="translate(0 1)"
                >
                  <ellipse
                    cx="32"
                    cy="33"
                    fill="#f5f5f5"
                    rx="32"
                    ry="7"
                  />
                  <g
                    fill-rule="nonzero"
                    stroke="#d9d9d9"
                  >
                    <path
                      d="M55 12.8 44.9 1.3Q44 0 42.9 0H21.1q-1.2 0-2 1.3L9 12.8V22h46z"
                    />
                    <path
                      d="M41.6 16c0-1.7 1-3 2.2-3H55v18.1c0 2.2-1.3 3.9-3 3.9H12c-1.7 0-3-1.7-3-3.9V13h11.2c1.2 0 2.2 1.3 2.2 3s1 2.9 2.2 2.9h14.8c1.2 0 2.2-1.4 2.2-3"
                      fill="#fafafa"
                    />
                  </g>
                </g>
              </svg>
            </div>
            <div
              class="ant-empty-description"
            >
              No data
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up ant-cascader-dropdown ant-suggestion css-var-_r_0_ ant-select-css-var ant-cascader-css-var css-var-_r_0_ ant-select-dropdown-placement-topLeft"
    style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box; min-width: auto;"
  >
    <div>
      <div
        class="ant-cascader-menus"
      >
        <ul
          class="ant-cascader-menu"
          role="menu"
        >
          <li
            aria-checked="false"
            class="ant-cascader-menu-item"
            data-path-key="undefined"
            role="menuitemcheckbox"
            title="Trigger by 'undefined'"
          >
            <div
              class="ant-cascader-menu-item-content"
            >
              <div
                class="ant-suggestion-item ant-flex css-var-_r_0_"
              >
                Trigger by 'undefined'
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/suggestion/demo/trigger.tsx extend context correctly 2`] = `[]`;
